--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
     <div class="b-example-divider"></div>
 
     <div class="container">
+
         <header>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-4 fw-normal text-body-emphasis">Главная</h1>
@@ -267,23 +268,64 @@
         </header>
 
         <main class="row">
-            <div class="row text-center">
-                <div class="col-4">
-                    <div class="card mb-4 rounded-3 shadow-sm">
-                        <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">Товар 1</h4>
-                        </div>
-                        <div class="card-body">
-                            <h2 class="card-title pricing-card-title">$100</h2>
-                            <p>
-                                10 users included,
-                                2 GB of storage,
-                                Email support,
-                                Help center access
-                            </p>
-                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Купить</button>
-                        </div>
+
+            <div class="row text-center col-4">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">Товар 1</h4>
                     </div>
+                    <div class="card-body">
+                        <h2 class="card-title pricing-card-title">$100</h2>
+                        <p>
+                            10 users included,
+                            2 GB of storage,
+                            Email support,
+                            Help center access
+                        </p>
+                        <button type="button" class="btn btn-success">Купить</button>
+                    </div>
+                </div>
+            </div>
+
+            <form class="mx-auto row col-8">
+                <div class="mb-3">
+                    <input type="text" class="form-control" id="exampleInputName" placeholder="Имя">
+                </div>
+                <div class="mb-3">
+                    <input type="password" class="form-control" id="exampleInputEmail" placeholder="Email">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </main>
+
+        <main class="p-2 row">
+            <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+               aria-expanded="false" aria-controls="collapseExample">
+                Как купить?
+            </a>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    В нашем магазине
+                </div>
+            </div>
+
+            <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+               aria-expanded="false" aria-controls="collapseExample">
+                Как доставить?
+            </a>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Ножками или машинкой, на Ваш выбор
+                </div>
+            </div>
+
+            <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button"
+               aria-expanded="false" aria-controls="collapseExample">
+                Какая гарантия?
+            </a>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    Слово пацана
                 </div>
             </div>
         </main>
