correct index.html

--- a/index.html
+++ b/index.html
@@ -330,6 +330,53 @@
             </div>
         </main>
 
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Номер</th>
+                <th scope="col">Название товара</th>
+                <th scope="col">Цена за штуку</th>
+                <th scope="col">Количество</th>
+                <th scope="col">Итоговая сумма</th>
+                <th scope="col">Статус заказа</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th class="table-info" scope="row">1</th>
+                <td class="table-info">Товар1</td>
+                <td class="table-info">1</td>
+                <td class="table-info">1</td>
+                <td class="table-info">1</td>
+                <td class="table-info">новый</td>
+            </tr>
+            <tr>
+                <th class="table-warning" scope="row">2</th>
+                <td class="table-warning">Товар2</td>
+                <td class="table-warning">2</td>
+                <td class="table-warning">2</td>
+                <td class="table-warning">4</td>
+                <td class="table-warning">обработка</td>
+            </tr>
+            <tr>
+                <th class="table-success" scope="row">3</th>
+                <td class="table-success">Товар3</td>
+                <td class="table-success">3</td>
+                <td class="table-success">3</td>
+                <td class="table-success">9</td>
+                <td class="table-success">обработан</td>
+            </tr>
+            <tr>
+                <th class="table-danger" scope="row">4</th>
+                <td class="table-danger">Товар4</td>
+                <td class="table-danger">4</td>
+                <td class="table-danger">4</td>
+                <td class="table-danger">16</td>
+                <td class="table-danger">отмена</td>
+            </tr>
+            </tbody>
+        </table>
+
     </div>
 
 </main>
